overlap fix

--- a/scss/_state-layout.scss
+++ b/scss/_state-layout.scss
@@ -7,7 +7,7 @@
 	max-width: 1500px;
 	height: auto;
 	margin: auto;
-	padding: 0 30px 0 30px;
+	padding: 0 30px 80px 30px;
 	background-color: rgba(209, 161, 4, 0.692);
 	border: 7px solid whitesmoke;
 	// margin-bottom: 50px;
@@ -166,6 +166,7 @@
 
 			.app {
 				width: 100%;
+				height: auto;
 				.app-title {
 					padding-top: 20px;
 					font-family: $heading-font;
@@ -214,7 +215,7 @@
 
 @media (max-width: 1480px) {
 	.state-wrapper {
-		padding-bottom: 100px;
+		padding-bottom: 220px;
 		.state-slogan {
 			.search-filter {
 				max-width: 100%;
@@ -269,7 +270,7 @@
 
 @media (max-width: 700px) {
 	.state-wrapper {
-		padding-bottom: 100px;
+		padding-bottom: 220px;
 
 		.group {
 			display: block;
@@ -304,7 +305,7 @@
 		}
 	}
 	.state-wrapper {
-		padding: 10px 10px 80px 10px;
+		padding: 10px 10px 220px 10px;
 		.state-slogan {
 			height: 120px;
 			h1 {
@@ -322,7 +323,7 @@
 
 @media (max-width: 500px) {
 	.state-wrapper {
-		padding: 10px 10px 80px 10px;
+		padding: 10px 10px 220px 10px;
 		border: none;
 		border-top: 7px solid whitesmoke;
 		.state-slogan {
